[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/hit_marker.png" type="Texture" id=1]
[ext_resource path="res://scripts/HitMark.gd" type="Script" id=2]
[ext_resource path="res://scenes/ActionButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fix_icon.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 1.5
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 20.21

[node name="HitMark" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 16, -31 )
frames = SubResource( 3 )

[node name="ActionButton" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, -45 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )
[connection signal="hold_completed" from="ActionButton" to="." method="_on_ActionButton_hold_completed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
